--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:ng="http://angularjs.org" lang="en" ng-app="myApp">
+<html xmlns:ng="http://angularjs.org" lang="en" ng-app="calcnumerico">
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
@@ -11,7 +11,7 @@
 
         <link rel="stylesheet" type="text/css" href="css/mobile-nav.css" />
         <link rel="stylesheet" type="text/css" href="css/topcoat-mobile-dark.css">
-        <title>Angular PhoneGap Sample</title>
+        <title>Numerical Analysis Calculator</title>
     </head>
     
     <body>
