--- a/www/index.html
+++ b/www/index.html
@@ -21,23 +21,20 @@
         <mobile-view/>
 
         <!-- Comment out the following 2 lines to test on the browser-->
-        <script type="text/javascript" src="cordova-2.7.0.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <!--script type="text/javascript" src="cordova-2.7.0.js"></script>
+        <script type="text/javascript" src="js/index.js"></script-->
         
         <!-- In production use min versions -->
         <script src="lib/jx.min.js"></script>
         <script src="lib/angular.js"></script>
         <script src="lib/angular-mobile.js"></script>
         <script src="lib/mobile-nav.js"></script>
+        <script src="lib/parser.js"></script>
 
         <script src="js/app.js"></script>
         <script src="js/services.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/filters.js"></script>
         <script src="js/directives.js"></script>
-
-        <script type="text/javascript">
-            app.initialize();
-        </script>
     </body>
 </html>
