--- a/www/index.html
+++ b/www/index.html
@@ -8,10 +8,10 @@
         <!-- Use the .min version of bootstrap files in production -->
         <!-- Use the following if you want to use responsive design -->
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-
         <link rel="stylesheet" type="text/css" href="css/mobile-nav.css" />
-        <link rel="stylesheet" type="text/css" href="css/topcoat-mobile-dark.css">
-        <title>Angular PhoneGap Sample</title>
+        <link rel="stylesheet" type="text/css" href="css/topcoat-mobile-dark.css"/>
+        <link rel="stylesheet" href="font/icomatic.css"/>
+        <title>CalcNA</title>
     </head>
     
     <body>
